# AsklaionTyper

./: .gitignore  README.md  client.py  pyproject.toml  requirements.txt  run.py  start.bat  start_client.bat  start_server.bat
scripts/: generate_logo.py  generate_logo_kie.py
src/: config_schema.yaml  input_simulation.py  main.py  result_thread.py  transcription.py  utils.py
src/ui/: base_window.py  main_window.py  status_window.py
